--- a/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
+++ b/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
@@ -144,7 +144,7 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" tag="1" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5xA-LY-yUt">
+                            <stackView opaque="NO" tag="1" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5xA-LY-yUt">
                                 <rect key="frame" x="20" y="404.5" width="280" height="155.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Мой расчет" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7NJ-XL-bjj">
@@ -246,7 +246,7 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cKx-Pe-neO">
-                                <rect key="frame" x="20" y="468" width="280" height="100"/>
+                                <rect key="frame" x="20" y="448" width="280" height="100"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="1vL-mf-cTz">
                                         <rect key="frame" x="0.0" y="0.0" width="280" height="51"/>
@@ -297,9 +297,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="0aq-kx-rrh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="11a-mQ-NFC"/>
-                            <constraint firstAttribute="bottom" secondItem="cKx-Pe-neO" secondAttribute="bottom" id="1cU-y2-Ofa"/>
+                            <constraint firstAttribute="bottom" secondItem="cKx-Pe-neO" secondAttribute="bottom" constant="20" id="1cU-y2-Ofa"/>
                             <constraint firstItem="0aq-kx-rrh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6oD-cC-gzI"/>
-                            <constraint firstItem="5xA-LY-yUt" firstAttribute="top" secondItem="0aq-kx-rrh" secondAttribute="bottom" constant="40" id="7sG-7U-rLP"/>
+                            <constraint firstItem="5xA-LY-yUt" firstAttribute="top" relation="lessThanOrEqual" secondItem="0aq-kx-rrh" secondAttribute="bottom" constant="40" id="7sG-7U-rLP"/>
                             <constraint firstItem="5xA-LY-yUt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="INE-Mo-96M"/>
                             <constraint firstItem="cKx-Pe-neO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-20" id="J19-sV-Ste"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5xA-LY-yUt" secondAttribute="trailing" constant="20" id="Ktb-qI-uTL"/>
@@ -372,6 +372,9 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="280" height="341.5"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="gray" title="НАПИСАТЬ РАЗРАБОТЧИКУ"/>
+                                                <connections>
+                                                    <action selector="sendEmailButton:" destination="q5B-ZJ-RZS" eventType="touchUpInside" id="LHT-fa-YHi"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DhI-Mn-q8q">
                                                 <rect key="frame" x="0.0" y="351.5" width="280" height="34.5"/>
@@ -398,11 +401,12 @@
                     <navigationItem key="navigationItem" title="Настройки" id="ztO-xd-Ida"/>
                     <connections>
                         <outlet property="tableView" destination="UJi-6H-3ik" id="CBj-iA-YEG"/>
+                        <segue destination="Tyh-hz-ycC" kind="show" identifier="changeProfileSegue" id="Bls-Fc-fBC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pr4-Zg-R27" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1102.5" y="743.66197183098598"/>
+            <point key="canvasLocation" x="1103" y="744"/>
         </scene>
         <!--Team View Controller-->
         <scene sceneID="U6o-Cg-t91">
@@ -519,12 +523,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TCG-tZ-mo7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1925.625" y="743.66197183098598"/>
+            <point key="canvasLocation" x="1926" y="1122"/>
         </scene>
         <!--Greeting View Controller-->
         <scene sceneID="eq2-nQ-eca">
             <objects>
-                <viewController id="Tyh-hz-ycC" customClass="GreetingViewController" customModule="CalorieCalculation" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="greetingViewController" id="Tyh-hz-ycC" customClass="GreetingViewController" customModule="CalorieCalculation" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1bi-UQ-OGH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -624,11 +628,12 @@
                         <outlet property="continueButton" destination="zQS-sj-9zK" id="cYt-ri-JMX"/>
                         <outlet property="imagesCollectionView" destination="lQy-yL-bw4" id="VBd-qq-kLW"/>
                         <outlet property="nicknameTextField" destination="74d-2H-no1" id="8jP-YE-2kt"/>
+                        <outlet property="titleLabel" destination="39c-EP-0bG" id="Gse-Bb-8Kw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tIJ-I2-E7c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1926" y="-172"/>
+            <point key="canvasLocation" x="1926" y="297"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Zyi-WD-svT">
@@ -667,6 +672,9 @@
             <point key="canvasLocation" x="278" y="744"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="7F6-nM-xpb"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="circle" catalog="system" width="128" height="123"/>
         <image name="gear" catalog="system" width="128" height="122"/>
