--- a/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
+++ b/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
@@ -350,7 +350,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tA3-c2-Vq6">
-                                <rect key="frame" x="20" y="64" width="280" height="504"/>
+                                <rect key="frame" x="20" y="64" width="280" height="484"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="UJi-6H-3ik">
                                         <rect key="frame" x="0.0" y="0.0" width="280" height="108"/>
@@ -367,10 +367,10 @@
                                         </prototypes>
                                     </tableView>
                                     <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qpH-04-ec9">
-                                        <rect key="frame" x="0.0" y="118" width="280" height="386"/>
+                                        <rect key="frame" x="0.0" y="118" width="280" height="366"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SnY-Ec-P7d">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="341.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="321.5"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="gray" title="НАПИСАТЬ РАЗРАБОТЧИКУ"/>
                                                 <connections>
@@ -378,7 +378,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DhI-Mn-q8q">
-                                                <rect key="frame" x="0.0" y="351.5" width="280" height="34.5"/>
+                                                <rect key="frame" x="0.0" y="331.5" width="280" height="34.5"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="gray" title="О НАС"/>
                                                 <connections>
@@ -395,7 +395,7 @@
                         <constraints>
                             <constraint firstItem="1gW-Aj-Obc" firstAttribute="trailing" secondItem="tA3-c2-Vq6" secondAttribute="trailing" constant="20" id="ESD-cq-msV"/>
                             <constraint firstItem="tA3-c2-Vq6" firstAttribute="leading" secondItem="1gW-Aj-Obc" secondAttribute="leading" constant="20" id="FmN-oA-1fM"/>
-                            <constraint firstItem="1gW-Aj-Obc" firstAttribute="bottom" secondItem="tA3-c2-Vq6" secondAttribute="bottom" id="X5M-jT-G0G"/>
+                            <constraint firstItem="1gW-Aj-Obc" firstAttribute="bottom" secondItem="tA3-c2-Vq6" secondAttribute="bottom" constant="20" id="X5M-jT-G0G"/>
                             <constraint firstItem="tA3-c2-Vq6" firstAttribute="top" secondItem="1gW-Aj-Obc" secondAttribute="top" id="xeZ-ct-tik"/>
                         </constraints>
                     </view>
@@ -535,7 +535,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="zBS-Wc-1Ed">
-                                <rect key="frame" x="20" y="40" width="280" height="131.5"/>
+                                <rect key="frame" x="20" y="104" width="280" height="131.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Давай знакомиться !" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="39c-EP-0bG">
                                         <rect key="frame" x="0.0" y="0.0" width="280" height="33.5"/>
@@ -571,7 +571,7 @@
                                 </constraints>
                             </stackView>
                             <collectionView clipsSubviews="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lQy-yL-bw4">
-                                <rect key="frame" x="20" y="191.5" width="280" height="292"/>
+                                <rect key="frame" x="20" y="255.5" width="280" height="228"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Vex-P0-YvD">
                                     <size key="itemSize" width="76" height="85"/>
@@ -674,7 +674,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="7F6-nM-xpb"/>
+        <segue reference="Bls-Fc-fBC"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="circle" catalog="system" width="128" height="123"/>
