--- a/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
+++ b/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
@@ -450,39 +450,39 @@
                                             <rect key="frame" x="0.0" y="0.0" width="280" height="151"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="c3j-7f-qCd">
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="c3j-7f-qCd">
                                                     <rect key="frame" x="0.0" y="0.0" width="280" height="151"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kkr-zi-e5d">
-                                                            <rect key="frame" x="0.0" y="0.0" width="151" height="151"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="136" height="151"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="kkr-zi-e5d" secondAttribute="height" multiplier="1:1" id="UgK-QT-ZK2"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="Jz4-gr-fHS">
-                                                            <rect key="frame" x="159" y="0.0" width="121" height="151"/>
+                                                        <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="Jz4-gr-fHS">
+                                                            <rect key="frame" x="144" y="0.0" width="136" height="151"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="роль" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zec-Yx-PT3">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="38" height="24.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="136" height="24.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя Фамилия" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1B-mA-JA2">
-                                                                    <rect key="frame" x="0.0" y="31.5" width="111" height="24.5"/>
+                                                                    <rect key="frame" x="0.0" y="31.5" width="136" height="24.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RpP-Ee-9H1" userLabel="LinkedIn">
-                                                                    <rect key="frame" x="0.0" y="63" width="121" height="25"/>
+                                                                    <rect key="frame" x="0.0" y="63" width="136" height="25"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                     <color key="textColor" systemColor="labelColor"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                                 </textView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="gitHubLink" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HI8-CX-Qrr">
-                                                                    <rect key="frame" x="0.0" y="95" width="121" height="24.5"/>
+                                                                    <rect key="frame" x="0.0" y="95" width="136" height="24.5"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                     <color key="textColor" systemColor="labelColor"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -490,7 +490,7 @@
                                                                     <dataDetectorType key="dataDetectorTypes" link="YES"/>
                                                                 </textView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="CZK-xx-MpK" userLabel="Telegram">
-                                                                    <rect key="frame" x="0.0" y="126.5" width="121" height="24.5"/>
+                                                                    <rect key="frame" x="0.0" y="126.5" width="136" height="24.5"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                     <color key="textColor" systemColor="labelColor"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
